--- a/app/src/main/res/values-bn-rBD/strings.xml
+++ b/app/src/main/res/values-bn-rBD/strings.xml
@@ -49,4 +49,6 @@
     <string name="delete_item_checkout">আপনি কি নিশ্চিত যে আপনি কার্ট থেকে %s কে সরাতে চান৷</string>
     <string name="yes">হ্যা</string>
     <string name="no">না</string>
+    <string name="removed_from_cart">কার্ট থেকে সরানো হয়েছে!</string>
+    <string name="order_placed_successfully">আপনার অর্ডার সফলভাবে স্থাপন করা হয়েছে!</string>
 </resources>
